--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.loftydevelopment.helloworldquiz">
 
+    <!-- the below line of code is used by the Google Play Store to filter the app from devices that do not meet the hardware/software requirement
+    see '<uses-feature>' documentation. Likely not necessary but is considered good practice-->
+    <uses-feature android:name="android.hardware.screen.portrait"/>
+
+    <!--
+                android:screenOrientation="portrait"
+                locks activity it is contained in to specified mode.
+                Other options:
+                1. "nosensor": locks the orientation to the devices preferred mode
+                    e.g. portrait for phone and landscape for tablets
+
+                2. "sensorPortrait": locks the orientation to portrait, but allows 180 degree rotation (upside down)
+
+                android:configChanges="keyboardHidden"
+                keeps program from changing mode when keyboard is called.
+
+
+               -->
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -12,13 +31,21 @@
         <activity
                 android:name=".ScoreActivity"
                 android:label="@string/title_activity_score"
-                android:theme="@style/AppTheme.NoActionBar">
+                android:theme="@style/AppTheme.NoActionBar"
+                android:screenOrientation="portrait"
+                android:configChanges="keyboardHidden">
         </activity>
-        <activity android:name=".EndQuizActivity">
+        <activity android:name=".EndQuizActivity"
+                  android:screenOrientation="portrait"
+                  android:configChanges="keyboardHidden">
         </activity>
-        <activity android:name=".QuizActivity">
+        <activity android:name=".QuizActivity"
+                  android:screenOrientation="portrait"
+                  android:configChanges="keyboardHidden">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+                  android:screenOrientation="portrait"
+                  android:configChanges="keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
