Updated the end quiz activity to include a banner ad with Admob and a picture. Also confirmed that all TODO comments have been handled and removed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <meta-data
+                android:name="com.google.android.gms.ads.APPLICATION_ID"
+                android:value="ca-app-pub-9610580369831416~8140375328"/>
     </application>
 
 </manifest>
